oil market update

--- a/demo-subscription.qmd
+++ b/demo-subscription.qmd
@@ -16,39 +16,37 @@ format:
 
 Данные и отчеты направляются по электронной почте или API.
 
-Обратитесь, чтобы подписаться на полную отчетов.
+Обратитесь, чтобы подписаться на полную версию отчетов.
 
 Контакты клиентской службы: [subscribe\@pbc-index.ru](mailto:subscribe@pbc-index.ru)
 
 ### Российский уголь
 
-[Рынок угля и влияющих отраслей (ежеквартально)](/reports/2023-09 ЦЦИ Квартальный отчет Рынок угля и влияющие отрасли.pdf)
+[Рынок угля и влияющих отраслей (ежеквартально)](/reports/2023-09%20ЦЦИ%20Квартальный%20отчет%20Рынок%20угля%20и%20влияющие%20отрасли.pdf)
 
-[Цена экспортной альтернативы угля в России (ежеквартально)](reports/2024-02 PBС Quarterly Coal NB.pdf)
+[Цена экспортной альтернативы угля в России (ежеквартально)](reports/2024-02%20PBС%20Quarterly%20Coal%20NB.pdf)
 
-[Экспортные цены на уголь в России (еженедельно)](reports/2024-04-08 PBC Weekly Coal.pdf)
+[Экспортные цены на уголь в России (еженедельно)](reports/2024-04-08%20PBC%20Weekly%20Coal.pdf)
 
 [Перевозки угля. Ставки фрахта (еженедельно)](reports/2024-09-17%20ЦЦИ%20Фрахт%20угля.pdf)
 
-
 ### Российская нефть
 
-[Российский рынок нефти: добыча и экспорт (раз в 2 недели)](reports/2024-04-03 Weekly GPB Crude RU.pdf)
+[Российский рынок нефти: добыча и экспорт (раз в 2 недели)](reports/2024-04-03%20Weekly%20GPB%20Crude%20RU.pdf)
 
-[Российский рынок нефтепродуктов: бензин (раз в 2 недели)](reports/2024-04-11 PBC Weekly OilProducts Gasoline.pdf)
+[Российский рынок нефтепродуктов: бензин (раз в 2 недели)](reports/2024-04-11%20PBC%20Weekly%20OilProducts%20Gasoline.pdf)
 
-[Российский рынок нефтепродуктов: дизель (раз в 2 недели)](reports/2024-04-26 PBC Weekly OilProducts Diesel RU.pdf)
+[Российский рынок нефтепродуктов: дизель (раз в 2 недели)](reports/2024-04-26%20PBC%20Weekly%20OilProducts%20Diesel%20RU.pdf)
 
-[Цены и дифференциалы на российскую нефть (раз в 2 недели)](reports/По каким ценам Россия продает нефть.pdf)
+[Цены и дифференциалы на российскую нефть (раз в 2 недели)](reports/По%20каким%20ценам%20Россия%20продает%20нефть.pdf)
 
 ### Российский газ
 
-[Экспортные цены на газ в России (ежемесячно)](reports/2024-02 PBC Monthly Gas.pdf)
+[Экспортные цены на газ в России (ежемесячно)](reports/2024-02%20PBC%20Monthly%20Gas.pdf)
 
-[Опрос профессиональных аналитиков: Газ (ежеквартально)](reports/2024-02 PBC Quarterly Gas Consensus.pdf)
+[Опрос профессиональных аналитиков: Газ (ежеквартально)](reports/2024-02%20PBC%20Quarterly%20Gas%20Consensus.pdf)
 
-[Обзор зарубежных рынков газа (ежеквартально)](reports/2024-02 PBC Quarterly Gas.pdf)
-
+[Обзор зарубежных рынков газа (ежеквартально)](reports/2024-02%20PBC%20Quarterly%20Gas.pdf)
 
 ### Морской фрахт
 
@@ -66,14 +64,13 @@ format:
 
 ### Российское растениеводство
 
-[Экспортные цены на пшеницу (еженедельно)](reports/2024-04-25%20PBC%20Weekly%20Wheat.pdf)
+[Экспортные цены на пшеницу (еженедельно)](reports/2024-07-12%20ЦЦИ%20Пшеница.pdf)
 
-[Подсолнечное масло (ежемесячно)](reports/2024-04%20GPB%20Monthly%20Sunflower%20Oil.pdf)
+[Подсолнечное масло (ежемесячно)](reports/2024-07%20ЦЦИ%20Подсолнечное%20масло.pdf)
 
 [Перевозки зерна. Ставки фрахта (еженедельно)](reports/2024-07-15%20PBC%20Weekly%20Wheat%20Freight.pdf)
 
-[Опрос профессиональных аналитиков: АПК](reports/2024-02 GPB Quarterly Agro Consensus.pdf)
-
+[Опрос профессиональных аналитиков: АПК](reports/2024-02%20GPB%20Quarterly%20Agro%20Consensus.pdf)
 
 ### Российская сухопутная логистика
 
@@ -81,10 +78,9 @@ format:
 
 [Сухопутная контейнерная логистика](reports/2024-07%20PBC%20Monthly%20Logistics.%20Flat%20wagons.pdf)
 
-[Опрос профессиональных аналитиков:коммерческая недвижимость](reports/2024-02 PBC Office and Warehouse Quarterly Consensus.pdf)
+[Опрос профессиональных аналитиков:коммерческая недвижимость](reports/2024-02%20PBC%20Office%20and%20Warehouse%20Quarterly%20Consensus.pdf)
 
-
-### Азотные удобрения 
+### Азотные удобрения
 
 [Азотные удобрения (еженедельно)](reports/2024-10-07%20ЦЦИ%20Азотные%20удобрения.pdf)
 
@@ -94,9 +90,6 @@ format:
 
 ### Химия
 
-[Цены на метанол в России (ежемесячно)](reports/2024-06 PBC Monthly Methanol.pdf)
+[Цены на метанол в России (ежемесячно)](reports/2024-06%20PBC%20Monthly%20Methanol.pdf)
 
-[Цены на ароматические углеводороды и их производные в России (еженедельно)](reports/2024-07-18 PBC Weekly Aromatics.pdf)
-
-
-
+[Цены на ароматические углеводороды и их производные в России (еженедельно)](reports/2024-07-18%20PBC%20Weekly%20Aromatics.pdf)
