--- a/index.qmd
+++ b/index.qmd
@@ -43,6 +43,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
+**22.10.2024 Перевозки угля**
+
+Ставки фрахта на перевозку угля из Усть-Луги и Тамани в среднем упали на 3% н/н и на 7% н/н соответственно на фоне снижения грузовой базы в портах. 
+
+[Подробнее →](markets/markets-sea-freight.qmd)
+
+**21.10.2024 Пшеница**
+
+Экспортные цены на пшеницу за неделю выросли на 8 долл. С 17 октября 2024 г. Россия ввела временные ограничения на импорт пшеницы из Казахстана.
+
+[Подробнее →](markets/markets-wheat.qmd)
+
 **03.10.2024. Сырьевой индекс ЦЦИ**
 
 Цены на российское сырье достигли минимума 2024 г.\
@@ -50,12 +62,6 @@ format:
 
 [Подробнее →](pbc-index.qmd)
 
-**14.10.2024 Пшеница**
-
-Экспортные цены на пшеницу за неделю выросли на 3 долл. Алжир исключил французские компании из участия в тендере по закупкам пшеницы. Reuters сообщает, что Минсельхоз РФ рекомендовал минимальную экспортную цену на пшеницу для международных тендеров - не ниже 250 долл./т FOB.
-
-
-[Подробнее →](markets/markets-wheat.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
