--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -24,6 +24,8 @@ format:
 
 Великобритания будет полагаться на импорт электроэнергии из Европы для удовлетворения пикового спроса после закрытия последней угольной электростанции.
 
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *22.10.2024* Уголь
 
 **Ожидания и неопределенность на рынке после праздников**
