--- a/markets/markets-sea-freight.qmd
+++ b/markets/markets-sea-freight.qmd
@@ -17,40 +17,45 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-*08.10.2024 Перевозки нефти*
+*23.10.2024 Перевозки нефти*
 
-**Ставки фрахта устойчивы к вызовам Ближнего Востока**
+**Ставки фрахта падают вслед за снижением геополитических рисков**
 
-Ставки фрахта на перевозку нефти стабильны. Конфликт на Ближнем Востоке ограниченно воздействует на рынок, судовладельцы ждут роста ставок в октябре на фоне увеличения экспорта нефти.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*16.10.2024 Перевозки нефтепродуктов*
-
-**Светлый и темный фрахт все дальше отдаляется друг от друга**
-
-Ставки фрахта на перевозку светлых нефтепродуктов остаются на минимальных уровнях, темные ставки начали восстанавливаться и выросли на всех отслеживаемых маршрутах. Эскалация конфликта на Ближнем Востоке ускоряет приближение сезонного роста.
+Ставки фрахта на перевозку нефти упали вслед за снижением геополитических рисков на Ближнем Востоке. Участники рынка в ближайшие недели ждут сезонного роста ставок на фоне перехода на танкера ледового класса. 
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*07.10.2024 Перевозки зерна*
+*23.10.2024 Перевозки нефтепродуктов*
 
-**Октябрь начался с роста Coaster**
+**Спрос на нафту в Азии растет из-за сокращения спреда с СУГ**
 
-Стоимость транспортировки зерна балкерами типа Handysize осталась на уровне прошлой недели. Ставки фрахта для Coaster выросли на 15,8% н/н.
+За первые три недели октября морской экспорт светлых нефтепродуктов из России снизился на 13% м/м,  темных - вырос на 12,8%. В результате, фрахт на светлые нефтепродукты находится на минимуме, в то время как темные ставки  постепенно увеличиваются.  
+
+Спред между ценами на СУГ и нафту в Азии приблизился к паритету, что делает нафту более привлекательной для азиатских производителей этилена и поддерживает спрос.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*15.10.2024 Перевозки угля*
+*22.10.2024 Перевозки угля*
 
-**Уголь преткновения: фрахту нужны поставки на Восток**
+**Межсезонье на рынке угля уронило ставки фрахта**
 
-Стоимость перевозки угля балкерами класса Handysize (40 тыс. т) из порта Восточный в Северный Китай осталась без изменений.
+Ставки фрахта на перевозку угля из Усть-Луги и Тамани в среднем упали на 3% н/н и на 7% н/н соответственно на фоне снижения грузовой базы в портах. 
 
 ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
+
+
+*21.10.2024 Перевозки зерна*
+
+**Coaster отходит от падения, а Handysize вырос**
+
+Стоимость транспортировки зерна балкерами типа Handysize выросла на 5,9% н/н. Ставки фрахта для балкеров типа Coaster остались на уровне прошлой недели.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 :::
 
-::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Ставка экспорта российской нефти
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
