--- a/methodology/methodology-exchange-rates.qmd
+++ b/methodology/methodology-exchange-rates.qmd
@@ -68,7 +68,7 @@ $$
 
 В определенных случаях, если применимо, Центр ценовых индексов может публиковать информацию о ценовых индексах в альтернативных валютах, отличных от оригинальной валюты ценового индекса.
 
-Конвертация в альтернативную валюту осуществляется с использованием среднего курса валютной пары оригинальной и альтернативной валют за период публикации ценового индекса по следующей формуле:
+Конвертация в альтернативную валюту осуществляется с использованием среднего курса валютной пары оригинальной и альтернативной валюты за период публикации ценового индекса по следующей формуле:
 
 $$
 Ц_АВ=Ц_ОВ*ОВ/АВ,
@@ -104,7 +104,7 @@ $$
 
 Центр ценовых индексов документирует и хранит:
 
--   Исходные данные, используемые при формировании ывлютных курсов;
+-   Исходные данные, используемые при формировании валютных курсов;
 -   Методологии, используемые при формировании валютных курсов;
 -   Результаты расчета валютных курсов в соответствие с данной методологией.
 
@@ -116,17 +116,17 @@ $$
 
 Курсы валют, публикуемые Банком России
 
-| Валютная пара | Исходная методика расчета                                                                                   | Периодичность обновления |
+| Валютная пара | Исходная методика расчета | Периодичность обновления |
 |------------------|---------------------------|---------------------------|
-| USD/RUB       | Средневзвешенный по объему торгов курс валюты, установленный на сделках, заключенных на межбанковском рынке | Ежедневно                |
-| EUR/RUB       | Средневзвешенный по объему торгов курс валюты, установленный на сделках, заключенных на межбанковском рынке | Ежедневно                |
-| CNY/RUB       | Средневзвешенный по объему торгов курс валюты, установленный на сделках, заключенных на Московской бирже    | Ежедневно                |
+| USD/RUB | Средневзвешенный по объему торгов курс валюты, установленный на сделках, заключенных на межбанковском рынке | Ежедневно |
+| EUR/RUB | Средневзвешенный по объему торгов курс валюты, установленный на сделках, заключенных на межбанковском рынке | Ежедневно |
+| CNY/RUB | Средневзвешенный по объему торгов курс валюты, установленный на сделках, заключенных на Московской бирже | Ежедневно |
 
 Курсы валют, публикуемые другими центральными банками
 
-| Валютная пара | Исходная методика расчета                                                                                                | Периодичность обновления |
+| Валютная пара | Исходная методика расчета | Периодичность обновления |
 |------------------|---------------------------|---------------------------|
-| USD/MYR       | Курс валюты, установленный на сделках, заключенных на межбанковском рынке в Куала-Лумпур на момент 11:30 (местное время) | Ежедневно                |
+| USD/MYR | Курс валюты, установленный на сделках, заключенных на межбанковском рынке в Куала-Лумпур на момент 11:30 (местное время) | Ежедневно |
 
 ### Сроки проведения опроса
 
