--- a/methodology/specs-coal.qmd
+++ b/methodology/specs-coal.qmd
@@ -46,13 +46,23 @@ fig-format: svg
 
 Базис
 
-Цены на коксующийся уголь оцениваются еженедельно на базисах: - FOB Far East (Восточный, Ванино, Владивосток); - FOB Black Sea (Тамань); - FOB Baltic (Усть-Луга, Мурманск).
+Цены на коксующийся уголь оцениваются еженедельно на базисах: 
 
-Объем партии Стандартный объем партии - не менее 1000 тонн.
+- FOB Far East (Восточный, Ванино, Владивосток); 
+- FOB Black Sea (Тамань); 
+- FOB Baltic (Усть-Луга, Мурманск).
 
-Валюта и единица измерения Долл./тонн.
+Объем партии. 
 
-Сроки проведения опроса Еженедельно, кроме официальных государственных праздников и выходных дней.
+Стандартный объем партии - не менее 1000 тонн.
+
+Валюта и единица измерения. 
+
+Долл./тонн.
+
+Сроки проведения опроса. 
+
+Еженедельно, кроме официальных государственных праздников и выходных дней.
 
 ### Энергетический уголь: экспорт
 
@@ -104,21 +114,21 @@ fig-format: svg
 
 ### Коксующийся уголь: внутренний рынок
 
-+-------------------+--------------------------------------------------------+
-| Параметры         | Характеристика                                         |
-+===================+========================================================+
-| Марка К           | Ro - 1-1,69, VM - 24-28%, Y - 13-17 мм; Сера - ≤0,8%.  |
-+-------------------+--------------------------------------------------------+
-| Марка Ж           | Ro - 0,8-1,19, VM ≥28%, Y - 14-26 мм; Сера - ≤0,8%.    |
-+-------------------+--------------------------------------------------------+
-| Марка ОС          | Ro \>1,3, VM \<22%, Y – 6-12 мм; Сера - ≤0,8%.         |
-+-------------------+--------------------------------------------------------+
-| Марка КО          | Ro - 0,8-1,39, VM – 16-30%, Y - 10-12 мм; Сера -≤0,8%. |
-+-------------------+--------------------------------------------------------+
-| Марка КС          | Ro - 1,1-1,69, VM \<30%, Y - 6-9 мм; Сера - ≤0,8%.     |
-+-------------------+--------------------------------------------------------+
-| Марка ГЖ          | Ro - 0,5-0,99, VM \>30%, Y - 17-26 мм; Сера - ≤0,8%.   |
-+-------------------+--------------------------------------------------------+
++-----------------+--------------------------------------------------------+
+| Параметры       | Характеристика                                         |
++=================+========================================================+
+| Марка К         | Ro - 1-1,69, VM - 24-28%, Y - 13-17 мм; Сера - ≤0,8%.  |
++-----------------+--------------------------------------------------------+
+| Марка Ж         | Ro - 0,8-1,19, VM ≥28%, Y - 14-26 мм; Сера - ≤0,8%.    |
++-----------------+--------------------------------------------------------+
+| Марка ОС        | Ro \>1,3, VM \<22%, Y – 6-12 мм; Сера - ≤0,8%.         |
++-----------------+--------------------------------------------------------+
+| Марка КО        | Ro - 0,8-1,39, VM – 16-30%, Y - 10-12 мм; Сера -≤0,8%. |
++-----------------+--------------------------------------------------------+
+| Марка КС        | Ro - 1,1-1,69, VM \<30%, Y - 6-9 мм; Сера - ≤0,8%.     |
++-----------------+--------------------------------------------------------+
+| Марка ГЖ        | Ro - 0,5-0,99, VM \>30%, Y - 17-26 мм; Сера - ≤0,8%.   |
++-----------------+--------------------------------------------------------+
 
 Базис
 
