--- a/methodology/specs-logistics.qmd
+++ b/methodology/specs-logistics.qmd
@@ -5,6 +5,7 @@ toc: true
 title-block-banner: none
 fig-format: svg
 ---
+
 ![](../images/railways-icon.svg)
 
 ### Ставка аренды: типовой полувагон
@@ -67,7 +68,9 @@ fig-format: svg
 | Вторая сторона сделки    | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                                                      |
 +--------------------------+------------------------------------------------------------------------------------------------------------------------------------------------+
 
-Типовые направления перевозок Ставки оперирования типового и инновационного вагонов оцениваются по следующим направлениям перевозок:
+Типовые направления перевозок
+
+Ставки оперирования типового и инновационного вагонов оцениваются по следующим направлениям перевозок:
 
 -   Кузбасс – Находка;
 -   Южная Якутия – Находка;
@@ -75,7 +78,7 @@ fig-format: svg
 -   Кузбасс – Тамань;
 -   прочие направления перевозок грузов, которые отражают рыночные условия и расширяют базу ответов респондентов.
 
-Валюта и единица измерения: Тыс./руб. без НДС.
+Валюта и единица измерения: тыс./руб. без НДС.
 
 Сроки проведения опроса: ежемесячно, в 3-ю неделю отчетного месяца.
 
@@ -192,7 +195,7 @@ fig-format: svg
 -   станции Китая – сухопутные пограничные переходы – Москва;
 -   прочие внутренние, импортные, экспортные и транзитные направления перевозок грузов в контейнерах железнодорожным транспортом, которые отражают рыночные условия и расширяют базу ответов респондентов.
 
-Валюта и единица измерения: т ыс. руб. c учётом НДС 20% (внутренние перевозки), долл. США (международные перевозки). Сроки проведения опроса: ежемесячно, в 1-ю неделю отчетного месяца
+Валюта и единица измерения: тыс. руб. c учётом НДС 20% (внутренние перевозки), долл. США (международные перевозки). Сроки проведения опроса: ежемесячно, в 1-ю неделю отчетного месяца
 
 Ставка на перевозку грузов в контейнерах в мультимодальном сообщении – стоимость транспортно-экспедиционных услуг при организации международной перевозки грузов в контейнерах морским и железнодорожным транспортом.
 
@@ -230,7 +233,9 @@ fig-format: svg
 | Вторая сторона сделки                 | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                                                                                                                                                                                                                                                               |
 +---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
-Типовые направления перевозок Ставки на перевозку грузов в контейнерах оцениваются по следующим направлениям перевозок:
+Типовые направления перевозок
+
+Ставки на перевозку грузов в контейнерах оцениваются по следующим направлениям перевозок:
 
 -   порты Китая – порты Дальнего Востока (Россия) – Москва;
 -   прочие направления перевозок грузов в контейнерах, которые отражают рыночные условия и расширяют базу ответов респондентов.
