--- a/demo-subscription.qmd
+++ b/demo-subscription.qmd
@@ -22,11 +22,11 @@ format:
 
 ### Российский уголь
 
-[Рынок угля и влияющих отраслей (ежеквартально)](/reports/2023-09%20ЦЦИ%20Квартальный%20отчет%20Рынок%20угля%20и%20влияющие%20отрасли.pdf)
+[Обзор зарубежных рынков угля (ежеквартально)](reports/2024-05 ЦЦИ_Квартальный_уголь_№2_rus.pdf)
 
 [Цена экспортной альтернативы угля в России (ежеквартально)](reports/2024-02%20PBС%20Quarterly%20Coal%20NB.pdf)
 
-[Экспортные цены на уголь в России (еженедельно)](reports/2024-04-08%20PBC%20Weekly%20Coal.pdf)
+[Экспортные цены на уголь в России (еженедельно)](reports/2024-09-09 PBC Weekly Coal.pdf)
 
 [Перевозки угля. Ставки фрахта (еженедельно)](reports/2024-09-17%20ЦЦИ%20Фрахт%20угля.pdf)
 
