--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -15,52 +15,80 @@ format:
 
 ::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-
 ### Котировки
 
-*23.10.2024* Уголь
- 
-**Великобритания заменила ТЭС на импорт**
+*21.10.2024* Уголь
 
-Великобритания будет полагаться на импорт электроэнергии из Европы для удовлетворения пикового спроса после закрытия последней угольной электростанции.
+**Рыночные настроения начали охлаждаться**
+
+Профицит предложения энергетического угля привел к возвращению цен ниже уровня 100 долл./т на уголь 6000 ккал/кг на базисе FOB порты Дальнего Востока.
+
+•       Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-145 долл./т СFR China.
+
+•       Рассматриваемый уровень цен на марку ГЖ: 155 долл./т СFR China.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*22.10.2024* Уголь
+*14.10.2024* Уголь
 
 **Ожидания и неопределенность на рынке после праздников**
 
-Рост цен до начала празднования Дня образования КНР воспринимался частью рынка, как спекулятивный и основанный на ожиданиях положительного эффекта от мер поддержки экономики Китая.  Однако отсутствие деталей в анонсированных мерах охладило ожидания относительно будущей стоимости угольной продукции. 
+Первая рабочая неделя в Китае встретила участников рынка неопределенностью относительно дальнейшего движения цен. Рост, наблюдаемый до начала празднования Дня образования КНР, воспринимался частью рынка, как спекулятивный и основанный на ожиданиях положительного эффекта от мер поддержки экономики Китая. Участники рынка ожидали, что ясность появится 12 октября после озвучивания плана финансовой поддержки экономики КНР. Однако отсутствие деталей в анонсированных мерах охладило ожидания как инвесторов на финансовых рынках, так и трейдеров относительно будущей стоимости угольной продукции. 
 
-- Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 145-150 долл./т СFR China.
+• Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 145-150 долл./т СFR China.
 
-- Рассматриваемый уровень цен на марку ГЖ: 153-157 долл./т СFR China.
+• Рассматриваемый уровень цен на марку ГЖ: 153-157 долл./т СFR China.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
+*07.10.2024* Уголь
+
+**Рынок ушел на праздники**
+
+Празднование Дня образования КНР (с 1 по 7 октября 2024 г.) принесло спокойствие на рынок после значительного роста в предпраздничную неделю.
+
+ - Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-140 долл./т СFR China, 145 долл./т СFR Malaysia.
+
+- Рассматриваемый уровень цен на марку ГЖ: 150-152 долл./т СFR China.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*30.09.2024* Уголь
+
+**Меры поддержки экономики Китая подтолкнули цены**
+
+Беспрецедентные меры поддержки экономики Китая, объявленные Народным банком КНР, которые включают снижение процентных ставок, норм обязательных резервных требований для крупных 
+банков и другие меры привели к росту цен на металлургический уголь в последнюю неделю перед праздниками в Китае. Экспортный индекс ЦЦИ на коксующийся уголь марки ГЖ в конце сентября отскочил 
+от локального ценового дна на 13,8% после роста стоимости производных финансовых инструментов на уголь.    
+
+- Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-140 долл./т СFR China.
+
+- Рассматриваемый уровень цен на марку ГЖ: 150-152 долл./т СFR China.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 ### 
 
 ### События
 
 *25 октября 2024. Пятница с Центром ценовых индексов. Уголь.*
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-
-### Экспортный Netback на уголь 5500 ккал/кг
+### Экспортный Netback на энергетический уголь 5500 ккал/кг
 
 ```{r,warning = FALSE, echo = FALSE, message = FALSE}
 
 library(highcharter)
 library(openxlsx)
-df = read.xlsx(xlsxFile = '../xls/график_уголь.xlsx', sheet = 1, detectDates = TRUE)
-df$date <- as.Date(df$date, origin = "1899-12-30")
-df$date = as.Date(df$date)
+df = read.xlsx(xlsxFile = '../xls/график_уголь.xlsx', sheet = "data", detectDates = TRUE)
+df[,1] <- NULL
+names(df) <- c('value', 'date')
+df$date <- as.Date(df$date, format = '%d.%m.%Y')
 
 hc = highchart() %>% 
-   hc_add_series(df, type = "line", hcaes(x = date, y = value), color = "#1A4AFC", 
-                 name = "5500 NAR NB FCA Кузбасс из Дальнего Востока") %>% 
+   hc_add_series(df, type = "line", hcaes(x = date, y = value), 
+                 color = "#1A4AFC", 
+                 name = "Энергетические угли, netback Russian Steam coal (5500 kcal/kg), FCA Кузбасс из Дальнего Востока") %>% 
    hc_xAxis(type = 'datetime') %>% 
    hc_yAxis(title  = list(text = 'руб./т')) %>% 
    hc_exporting(enabled = FALSE) %>% 
@@ -74,8 +102,6 @@ hc
 
 
 ```
-
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -85,5 +111,4 @@ hc
 
 [Спецификация угольных котировок](../methodology/specs-coal.qmd)
 :::
-::: 
-
+:::
