--- a/markets/markets-railways.qmd
+++ b/markets/markets-railways.qmd
@@ -17,19 +17,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-*16.09.2024*
+*18.10.2024*
 
-**Старым проблемам — новые ставки.** Сухопутные пограничные переходы и терминалы Дальнего Востока не могут справиться с входящим потоком контейнеров: ставки на их доставку из Китая по железной дороге выросли до 12% за месяц.
+**Ставки на прямые контейнерные поезда из Китая в Россию впервые с мая остановили рост.**
 
--   Владельцы контейнерного оборудования продолжают увеличивать субсидии для возврата своей тары в Китай. Субсидия за пользование 40-футовым контейнером на маршруте Москва - Шанхай превысила 2 тыс.долл.
--   Вместе с началом отправок контейнеров в полувагонах из Забайкальска в августе обновлён очередной рекорд по объёму таких перевозок на сети РЖД.
--   Повышение ключевой ставки банка России до 19% снизит доступность пополнения вагонного парка для контейнерных операторов.
+-   Прямое железнодорожное сообщение теряет конкурентные преимущества: из-за роста и непредсказуемости сроков перевозки ставки на отправку 40-футового контейнера из крупнейших городов КНР в Москву опустились ниже 9 тыс. долл.
+-   Стоимость железнодорожного плеча на мультимодальном маршруте контейнерных перевозок «порты Китая – порты Дальнего Востока – Москва» выросла за месяц на 10%.
+-   Темпы прироста контейнерных перевозок по сети РЖД снизились в сентябре до +1,9% г/г. На железной дороге фиксируются массовые отставления поездов от движения, сохраняются проблемы вывоза контейнеров из дальневосточных портов и с сухопутных пограничных переходов.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-
 ### Стоимость железнодорожной контейнерной перевозки
 
 ```{r,warning = FALSE, echo = FALSE, message = FALSE}
@@ -38,15 +37,13 @@ library(highcharter)
 library(openxlsx)
 library(tidyr)
 
-df <- read.xlsx(xlsxFile = '../xls/сухопутная логистика.xlsx', sheet = 1, detectDates = TRUE, startRow = 1) 
-dt = names(df)
-dt = as.Date(as.numeric(dt), origin = "1899-12-30")
-value = as.numeric(df[7,])
-df = data.frame(dt = dt, value = value)
-df = df[!is.na(df$value),]
+df <- read.xlsx(xlsxFile = '../xls/График_жд контейнеры.xlsx', sheet = 1, detectDates = TRUE, startRow = 1) 
+names(df) <- c('dt', 'value')
+df[,3] <- NULL
+df$dt = as.Date(as.numeric(df$dt), origin = "1899-12-30")
 
 hc = highchart() %>% 
-   hc_add_series(df, type = "line", hcaes(x = dt, y = value), color = "#1A4AFC", name = "Стоимость железнодорожной контейнерной перевозки") %>% 
+   hc_add_series(df, type = "line", hcaes(x = dt, y = value), color = "#1A4AFC", name = "Стоимость контейнерной перевозки по маршруту Москва - Новосибирск, 40HC COC") %>% 
    hc_xAxis(type = 'datetime') %>% 
    hc_yAxis(title  = list(text = 'тыс.руб. с учётом НДС')) %>% 
    hc_exporting(enabled = FALSE) %>% 
@@ -59,10 +56,7 @@ hc$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Апр",	"М
 hc
 ```
 
-
 [*Примечание: стоимость железнодорожной контейнерной перевозки определяется как ставка на перевозку 40-футового контейнера собственности перевозчика (COC) по маршруту CY Москва – FOR Новосибирск. Этот маршрут является одним из самых востребованных во внутрироссийском сообщении. Источник – ежемесячные отчёты ЦЦИ «Сухопутная контейнерная логистика». Полный список публикуемых ставок доступен в [Спецификации ставок сухопутной логистики.](../methodology/specs-logistics.qmd)*]{style="font-size:0.75em"}
-
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
