--- a/index.qmd
+++ b/index.qmd
@@ -19,7 +19,7 @@ format:
 
 ### Актуальное
 
-21 октября 2024. **На Cbonds стартует размещение аналитики Центра ценовых индексов **
+21 октября 2024. **На Cbonds стартует размещение аналитики Центра ценовых индексов**
 
 [Пресс-релиз →](events/2024-10-21-cbonds.qmd)
 
@@ -45,7 +45,7 @@ format:
 
 **22.10.2024 Перевозки угля**
 
-Ставки фрахта на перевозку угля из Усть-Луги и Тамани в среднем упали на 3% н/н и на 7% н/н соответственно на фоне снижения грузовой базы в портах. 
+Ставки фрахта на перевозку угля из Усть-Луги и Тамани в среднем упали на 3% н/н и на 7% н/н соответственно на фоне снижения грузовой базы в портах.
 
 [Подробнее →](markets/markets-sea-freight.qmd)
 
@@ -55,12 +55,11 @@ format:
 
 [Подробнее →](markets/markets-wheat.qmd)
 
-**03.10.2024. Сырьевой индекс ЦЦИ**
+**18.10.2024 Сухопутная контейнерная логистика**
 
-Цены на российское сырье достигли минимума 2024 г.\
-ФРС США снизила процентную ставку, а Народный банк Китая обнародовал меры для поддержки экономики. Объявленные решения улучшили ценовые ожидания участников рынка.
+Прямое железнодорожное сообщение теряет конкурентные преимущества: из-за роста и непредсказуемости сроков перевозки ставки на отправку 40-футового контейнера из крупнейших городов КНР в Москву опустились ниже 9 тыс. долл.
 
-[Подробнее →](pbc-index.qmd)
+[Подробнее →](markets/markets-railways.qmd)
 
 :::
 
