--- a/markets/markets-chemicals.qmd
+++ b/markets/markets-chemicals.qmd
@@ -7,18 +7,14 @@ format:
     grid:
        margin-width: 300px
        body-width: 900px
-
 ---
 
 # ![](../images/icon-chemicals2.svg) Метанол {.my-custom-class style="margin-left:3%;"}
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-
-::::: {.grid style="margin-left:0%"}
-
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-
 ### Котировки
 
 *09.2024 Метанол*
@@ -36,17 +32,13 @@ format:
 Региональные индексы цен на метанол в России в августе снизились в среднем ещё на 1%.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
-
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
-
 ### Методология
 
 [Методология ценовых индикаторов](../methodology/methodology-benchmark-pbc.qmd)
 
 [Спецификация химических продуктов]()
 :::
-
-:::::
+:::
