--- a/markets/markets-sea-freight.qmd
+++ b/markets/markets-sea-freight.qmd
@@ -17,42 +17,37 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-*23.10.2024 Перевозки нефти*
+*30.10.2024 Перевозки нефти*
 
-**Ставки фрахта падают вслед за снижением геополитических рисков**
+**Рынок реагирует на ослабление ближневосточного кризиса**
 
-Ставки фрахта на перевозку нефти упали вслед за снижением геополитических рисков на Ближнем Востоке. Участники рынка в ближайшие недели ждут сезонного роста ставок на фоне перехода на танкера ледового класса. 
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*23.10.2024 Перевозки нефтепродуктов*
-
-**Спрос на нафту в Азии растет из-за сокращения спреда с СУГ**
-
-За первые три недели октября морской экспорт светлых нефтепродуктов из России снизился на 13% м/м,  темных - вырос на 12,8%. В результате, фрахт на светлые нефтепродукты находится на минимуме, в то время как темные ставки  постепенно увеличиваются.  
-
-Спред между ценами на СУГ и нафту в Азии приблизился к паритету, что делает нафту более привлекательной для азиатских производителей этилена и поддерживает спрос.
+Снижение уровня эскалации на Ближнем Востоке понижательно влияет на рынок нефтяного фрахта. Загрузка портов российской экспортной нефтью сохранилась на уровне прошлой недели.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*22.10.2024 Перевозки угля*
+*30.10.2024 Перевозки нефтепродуктов*
 
-**Межсезонье на рынке угля уронило ставки фрахта**
+**Налоговая реформа Китая ударит по импорту мазута**
 
-Ставки фрахта на перевозку угля из Усть-Луги и Тамани в среднем упали на 3% н/н и на 7% н/н соответственно на фоне снижения грузовой базы в портах. 
+Ставки на перевозку светлых нефтепродуктов восстанавливаются с минимальных значений. Темные ставки стабильны. Китай планирует реформу налоговой системы, что увеличит стоимость импортируемого мазута и создаст риски для закупок российской продукции независимыми НПЗ.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*29.10.2024 Перевозки угля*
+
+**Осеннее падение спроса держит ставки на дне**
+
+Стоимость перевозки угля сухогрузами класса Capesize (180 тыс. т) из Тамани в Индию и Китай упала на 23% н/н и на 28% н/н соответственно из-за низкого спроса на уголь в странах-импортерах.
 
 ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 
+*29.10.2024 Перевозки зерна*
 
-*21.10.2024 Перевозки зерна*
+**Coaster и Handysize движутся в противоположные стороны**
 
-**Coaster отходит от падения, а Handysize вырос**
-
-Стоимость транспортировки зерна балкерами типа Handysize выросла на 5,9% н/н. Ставки фрахта для балкеров типа Coaster остались на уровне прошлой недели.
+Стоимость транспортировки зерна балкерами типа Handysize выросла на 5,6% н/н. Ставки фрахта для балкеров типа Coaster в Турцию снизились на 3,7% н/н.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
