--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -23,9 +23,9 @@ format:
 
 Профицит предложения энергетического угля привел к возвращению цен ниже уровня 100 долл./т на уголь 6000 ккал/кг на базисе FOB порты Дальнего Востока.
 
-•       Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-145 долл./т СFR China.
+• Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-145 долл./т СFR China.
 
-•       Рассматриваемый уровень цен на марку ГЖ: 155 долл./т СFR China.
+• Рассматриваемый уровень цен на марку ГЖ: 155 долл./т СFR China.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -35,9 +35,9 @@ format:
 
 Первая рабочая неделя в Китае встретила участников рынка неопределенностью относительно дальнейшего движения цен. Рост, наблюдаемый до начала празднования Дня образования КНР, воспринимался частью рынка, как спекулятивный и основанный на ожиданиях положительного эффекта от мер поддержки экономики Китая. Участники рынка ожидали, что ясность появится 12 октября после озвучивания плана финансовой поддержки экономики КНР. Однако отсутствие деталей в анонсированных мерах охладило ожидания как инвесторов на финансовых рынках, так и трейдеров относительно будущей стоимости угольной продукции. 
 
-• Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 145-150 долл./т СFR China.
+- Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 145-150 долл./т СFR China.
 
-• Рассматриваемый уровень цен на марку ГЖ: 153-157 долл./т СFR China.
+- Рассматриваемый уровень цен на марку ГЖ: 153-157 долл./т СFR China.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -47,26 +47,12 @@ format:
 
 Празднование Дня образования КНР (с 1 по 7 октября 2024 г.) принесло спокойствие на рынок после значительного роста в предпраздничную неделю.
 
- - Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-140 долл./т СFR China, 145 долл./т СFR Malaysia.
+-   Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-140 долл./т СFR China, 145 долл./т СFR Malaysia.
 
-- Рассматриваемый уровень цен на марку ГЖ: 150-152 долл./т СFR China.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*30.09.2024* Уголь
-
-**Меры поддержки экономики Китая подтолкнули цены**
-
-Беспрецедентные меры поддержки экономики Китая, объявленные Народным банком КНР, которые включают снижение процентных ставок, норм обязательных резервных требований для крупных 
-банков и другие меры привели к росту цен на металлургический уголь в последнюю неделю перед праздниками в Китае. Экспортный индекс ЦЦИ на коксующийся уголь марки ГЖ в конце сентября отскочил 
-от локального ценового дна на 13,8% после роста стоимости производных финансовых инструментов на уголь.    
-
-- Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-140 долл./т СFR China.
-
-- Рассматриваемый уровень цен на марку ГЖ: 150-152 долл./т СFR China.
+-   Рассматриваемый уровень цен на марку ГЖ: 150-152 долл./т СFR China.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-### 
+
 
 ### События
 
@@ -81,12 +67,11 @@ format:
 library(highcharter)
 library(openxlsx)
 df = read.xlsx(xlsxFile = '../xls/график_уголь.xlsx', sheet = "data", detectDates = TRUE)
-df[,1] <- NULL
-names(df) <- c('value', 'date')
-df$date <- as.Date(df$date, format = '%d.%m.%Y')
+names(df) <- c('dt', 'value')
+df$dt = as.Date(as.numeric(df$dt), origin = "1899-12-30")
 
 hc = highchart() %>% 
-   hc_add_series(df, type = "line", hcaes(x = date, y = value), 
+   hc_add_series(df, type = "line", hcaes(x = dt, y = value), 
                  color = "#1A4AFC", 
                  name = "Энергетические угли, netback Russian Steam coal (5500 kcal/kg), FCA Кузбасс из Дальнего Востока") %>% 
    hc_xAxis(type = 'datetime') %>% 
@@ -102,6 +87,10 @@ hc
 
 
 ```
+
+[*Примечание: ставка netback на энергетический уголь Russian Steam coal (5500 kcal/kg) расчитывается как среднее арифмитическое за месяц на базисе FCA Кузбасс Дальний Восток, руб/т.*]{style="font-size:0.75em"}
+
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
