--- a/forecasts/forecast-fx.qmd
+++ b/forecasts/forecast-fx.qmd
@@ -17,7 +17,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-## Результаты опроса: сентябрь 2024 г.
+## Результаты опроса: октябрь 2024 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(kableExtra)
@@ -42,13 +42,11 @@ df %>%
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
-Последнее повышение ключевой ставки до 19% и жесткий сигнал Банка России на будущие решения сместили ожидания консенсуса в пользу повышения ставки до 20% в пике цикла (было 18%). Альтернативные варианты широко не распространены (19% - 1 из 13 аналитиков). Прогноз по инфляции изменился менее значительно, но все также предполагает, что цель в 4% не будет достигнута в 2025 г. (консенсус – 5%).
+После заседания Банка России 25 октября и обновленного прогноза регулятора ожидания консенсуса изменились в пользу повышения ставки до 22% в пике цикла. Распространены и альтернативные варианты (21% - 2 из 13 аналитиков и 23% - 3 из 13 аналитиков). Темпы снижения ключевой ставки остаются неизменными  -6 п.п. к концу 2025 г.
 
-Прогнозы цен на нефть активно пересматриваются «вниз» из-за меньшего, чем ожидалось спроса в Китае. Консенсус предполагает 77-79 долл./барр. brent в 2025 г. (что все равно выше текущих 72-74 долл./барр.)
+Ожидания по инфляции продолжают сдвигаться «вверх», цель в 4% не будет достигнута в 2025 г. (консенсус – 5,5%).
 
-Оценка дисконта цен на российскую нефть аналитиками сокращается до 10 долл./барр. на прогнозном периоде 2025 г., но это не «перекрывает» эффект от ожидаемого снижения мировых цен на нефть.
-
-Темпы смягчения монетарных политик ФРС и ЕЦБ пересматриваются. Консенсус ожидает более быстрого снижения ставок после последнего решения ФРС о снижении сразу на 0,5 п.п. (первое после начала цикла в 2022 г.).
+Ослабление курса рубля до 95-97 руб./долл. ранее было заложено в ожидания консенсуса в 1 кв. 2025 г., но реализовалось раньше – в октябре 2024 г. Дальнейшее ослабление курса рубля предполагается более умеренным.
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
@@ -78,7 +76,7 @@ df_cnyrub_range$date <- as.Date(df_cnyrub_range$date)
 
 hc <- highchart() %>% 
    hc_xAxis(type = "datetime") %>%
-   hc_yAxis(title  = list(text = 'руб. за юань'), max = 15, min = 11) %>% 
+   hc_yAxis(title  = list(text = 'руб. за юань'), max = 16, min = 12) %>% 
    hc_plotOptions(area = list(stacking = 'normal')) %>%
    hc_add_series(df_cnyrub_range, hcaes(x = date, y = round(value,2), group = X1), type = 'area', color = c('#d1e5ff','#ffffff')) %>%
    hc_add_series(df_cnyrub_last, type="line", hcaes(x = date, y = round(value,2), group=index), color = "#1A4AFC", dataLabels = TRUE) %>%
@@ -96,7 +94,7 @@ hc
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
 ## Список участников
 
-В опросе приняли участие 14 профессиональных аналитиков, 12 из них дали согласие на раскрытие информации об их участии в опросе
+В опросе приняли участие 13 профессиональных аналитиков, 12 из них дали согласие на раскрытие информации об их участии в опросе
 
 | <!-- -->                                               | <!-- -->                                                  | <!-- -->                                         |
 |------------------------|--------------------------|----------------------|
@@ -104,7 +102,7 @@ hc
 | Байкова Анастастия, Мурашов Cтанислав (Райффайзенбанк) | Виноградов Артем, Попов Юрий (Сбербанк КИБ)               | Полевой Дмитрий (Астра управление активами)      |
 | Бирюков Павел (Газпромбанк)                            | Жирнов Григорий                                           | Попов Денис (Промсвязьбанк)                      |
 | Вайсберг Валерий (ИК РЕГИОН)                           | Клепач Андрей (ВЭБ.РФ)                                    | Салихов Марсель (Институт энергетики и финансов) |
-|                                                        | *2 участника не подтвердили согласие на раскрытие данных* |                                                  |
+|                                                        | *1 участник не подтвердил согласие на раскрытие данных* |                                                  |
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
